devops/jenkins/manifests/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    k8s-app: jenkins
  name: jenkins
  namespace: jenkins
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s-app: jenkins
  template:
    metadata:
      labels:
        k8s-app: jenkins
      namespace: jenkins
      name: jenkins
    spec:
      #hostAliases:
      #- ip: "192.168.45.21"
       # hostnames:
        #  - "updates.jenkins-ci.org"
      # - ip: "52.202.51.185"
      #   hostnames:
      #     - "updates.jenkins.io"
      #- ip: "192.168.45.21"
       # hostnames:
        #  - "gitlab.idevops.site"
      #- ip: "192.168.45.21"
       # hostnames:
        #  - "sonar.idevops.site"
      #- ip: "192.168.45.21"
       # hostnames:
        #  - "nexus.idevops.site"
      containers:
        - name: jenkins
          image: jenkins/jenkins
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: web
              protocol: TCP
            - containerPort: 50000
              name: agent
              protocol: TCP
          resources:
            limits:
              cpu: 2000m
              memory: 8Gi
            requests:
              cpu: 500m
              memory: 512Mi
          # livenessProbe:
          #   httpGet:
          #     path: /login
          #     port: 8080
          #   initialDelaySeconds: 60
          #   timeoutSeconds: 5
          #   failureThreshold: 12
          # readinessProbe:
          #   httpGet:
          #     path: /login
          #     port: 8080
          #   initialDelaySeconds: 60
          #   timeoutSeconds: 5
          #   failureThreshold: 12
          volumeMounts:
            - name: jenkins-home
              mountPath: /var/lib/jenkins
      volumes:
        - name: jenkins-home
          persistentVolumeClaim:
            claimName: jenkins
      serviceAccountName: jenkins
---
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: jenkins
  name: jenkins
  namespace: jenkins
spec:
  type: NodePort
  ports:
    - name: web
      port: 8080
      targetPort: 8080
    - name: slave
      port: 50000
      targetPort: 50000
  selector:
    k8s-app: jenkins
